--- a/project2/index.html
+++ b/project2/index.html
@@ -103,6 +103,61 @@
 		<img src="./img/section_icon/google.png" alt="Google">
 	</section>
 
+	<section class="engage_section_bg">
+		<div class="engage_section container">
+			<div class="engage">
+				<h6 class="engage_title_h6">
+					Engage Visitors
+				</h6>
+
+				<h1 class="engage_title_h1">
+					Understand your audience
+				</h1>
+
+				<p class="engage_text">
+					Early stage company? Eligible applicants get all of our products for just $49 a month.
+				</p>
+			</div>
+
+			<div class="engage_buttons">
+				<button class="engage_header_button">
+					Get Started
+				</button>
+
+				<button class="engage_start_button">
+					Learn More
+				</button>
+			</div>
+
+			<div class="engage_img">
+				<div class="engage_bg">
+					<img class="engage_img_1" src="./img/section_engage/Developers.png" alt="Developers">
+					<p class="engage_text">
+						Developers
+					</p>
+				</div>
+				<div class="engage_bg">
+					<img class="engage_img_2" src="./img/section_engage/Entertainment.png" alt="Entertainment">
+					<p class="engage_text">
+						Entertainment
+					</p>
+				</div>
+				<div class="engage_bg">
+					<img class="engage_img_3" src="./img/section_engage/Athletes.png" alt="Athletes">
+					<p class="engage_text">
+						Athletes
+					</p>
+				</div>
+				<div class="engage_bg">
+					<img class="engage_img_4" src="./img/section_engage/Creators.png" alt="Creators">
+					<p class="engage_text">
+						Creators
+					</p>
+				</div>
+			</div>
+		</div>
+	</section>
+
 </body>
 
 </html>
