--- a/project2/index.html
+++ b/project2/index.html
@@ -158,6 +158,29 @@
 		</div>
 	</section>
 
+	<section class="section_grid container">
+		<div class="section_grid_text">
+
+			<h3 class="grid_title">
+				All Surfaces Covered
+			</h3>
+
+			<p class="grid_text">
+				IOON kills bacteria on your hands, food, tables, laptops, you name it
+			</p>
+		</div>
+
+		<div class="grid">
+			<img class="grid_item" src="./img/section_grid/1.png" alt="1">
+			<img class="grid_item" src="./img/section_grid/2.png" alt="2">
+			<img class="grid_item" src="./img/section_grid/3.png" alt="3">
+			<img class="grid_item" src="./img/section_grid/4.png" alt="4">
+			<img class="grid_item" src="./img/section_grid/5.png" alt="5">
+			<img class="grid_item" src="./img/section_grid/6.png" alt="6">
+			<img class="grid_item" src="./img/section_grid/7.png" alt="7">
+		</div>
+	</section>
+
 </body>
 
 </html>
