--- a/project2/index.html
+++ b/project2/index.html
@@ -37,56 +37,57 @@
 						<a class="header_a" href="#">Stories</a>
 					</li>
 				</ul>
-				<button class="header_button">Get Started</button>
+				<button class="button button_blue button_blue-header">Get Started</button>
 			</nav>
 		</div>
 	</header>
 
-	<section class="section_start">
+	<section class="header_inner">
 
-		<div class="start_img_block">
-			<img class="start_img" src="./img/section1/ouch.png" alt="startimg">
+		<div class="header_inner_image">
+			<img class="header_inner_img" src="./img/section1/ouch.png" alt="startimg">
 		</div>
 
-		<div class="start container">
+		<div class="header_inner-textblock container">
 
-			<h1 class="start_title">
+			<h1 class="header_inner_title">
 				Build stunning websites & apps.
 			</h1>
 
-			<p class="start_text">
+			<p class="header_inner_text">
 				Create live segments and target the right people for messages based on their behaviors.
 			</p>
-			<nav class="start_nav">
-				<button class="start_header_button">
+
+			<div class="header_inner-btn">
+				<button class="button button_blue">
 					Get Started
 				</button>
 
-				<button class="start_button">
+				<button class="button button_white button_white-inner">
 					Learn More
 				</button>
-			</nav>
+			</div>
 		</div>
 	</section>
 
-	<section class="section_what">
+	<section class="header_footer">
 		<div class="container flex">
-			<div class="what_about">
-				<h6 class="what_title">
+			<div class="header_footer-left">
+				<h6 class="header_footer_title">
 					What is it about?
 				</h6>
 
-				<p class="what_text">
+				<p class="header_footer_text">
 					Building a website for a startup that looks amazing is not a rocket science anymore.
 				</p>
 			</div>
 
-			<div class="who_for">
-				<h6 class="what_title">
+			<div class="header_footer-right">
+				<h6 class="header_footer_title">
 					Who is it for?
 				</h6>
 
-				<p class="what_text">
+				<p class="header_footer_text">
 					Startups, small companies and teams, entrepreneurs and web developers.
 				</p>
 			</div>
@@ -103,54 +104,160 @@
 		<img src="./img/section_icon/google.png" alt="Google">
 	</section>
 
-	<section class="engage_section_bg">
-		<div class="engage_section container">
-			<div class="engage">
-				<h6 class="engage_title_h6">
+	<section class="inbox">
+		<div class="container flex">
+			<div class="container-image">
+				<img class="container-image_img" src="./img/inbox/ouch.svg" alt="inboximg">
+			</div>
+
+			<div class="info">
+				<p class="info_pretitle info_pretitle-orange">
+					Team Inbox
+				</p>
+
+				<h3 class="info_title">
+					Manage conversations
+				</h3>
+
+				<p class="info_text">
+					One place to manage and respond to all conversations with leads and users. Receive messages from leads.
+				</p>
+
+				<div class="inbox_response">
+					<p class="inbox_text">
+						“Great widgets. Great selection. Great design and <span class="info_text-bold">easy to
+							implement</span>. Definitely a huge
+						time
+						saver for
+						a web developer!”
+					</p>
+
+					<div class="flex flex_start">
+						<img class="inbox_img" src="./img/inbox/persone.svg" alt="persone">
+
+						<div>
+							<p class="inbox_name">
+								Viella Malkovich
+							</p>
+
+							<p class="inbox_position">
+								Creative Director at Johnson
+							</p>
+						</div>
+					</div>
+
+				</div>
+			</div>
+
+		</div>
+
+	</section>
+
+	<section class="communicate">
+		<div class="container">
+			<div class="info">
+				<p class="info_pretitle info_pretitle-blue">
+					Communicate Better
+				</p>
+				<h3 class="info_title info_title-communicate">
+					Built for busy small teams
+				</h3>
+				<p class="info_text">
+					Three products that can be used independently or combined together for your company’s needs.
+				</p>
+			</div>
+			<div>
+				<button class="button button_blue button_blue-communicate">
+					Get Started
+				</button>
+
+			</div>
+
+			<div class="container-image flex flex_end">
+				<img class="container-image_communicate" src="./img/communicate/ouch.svg" alt="communicate">
+			</div>
+
+			<div class="communicate_footer flex">
+				<div class="communicate_block">
+					<p class="communicate_text">
+						<span class="communicate_text-bold">Subscriptions.</span> Foundation works with the tools and
+						services you
+						already use every day.
+					</p>
+
+					<a class="communicate_text-link" href="">Learn more about subscriptions</a>
+				</div>
+
+				<div class="communicate_block">
+					<p class="communicate_text">
+						<span class="communicate_text-bold">Felxible Hours.</span> Get started with our simple snippet of
+						JavaScript
+						or easy to install SDKs for iOS and Android.
+					</p>
+
+					<a class="communicate_text-link" href="#">Get more info about hours</a>
+				</div>
+
+				<div class="communicate_block">
+					<p class="communicate_text">
+						<span class="communicate_text-bold">Fast Communication.</span> We offer measures like 2FA and SSO to
+						ensure
+						the safety of your data.
+					</p>
+					<a class="communicate_text-link" href="#">Communication guidelines</a>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="choice_bg">
+		<div class="choice_block container">
+			<div class="choice_block-inner">
+				<h6 class="info_pretitle info_pretitle-black">
 					Engage Visitors
 				</h6>
 
-				<h1 class="engage_title_h1">
+				<h3 class="info_title info_title-choice">
 					Understand your audience
-				</h1>
+				</h3>
 
-				<p class="engage_text">
+				<p class="info_text info_text-choice">
 					Early stage company? Eligible applicants get all of our products for just $49 a month.
 				</p>
 			</div>
 
-			<div class="engage_buttons">
-				<button class="engage_header_button">
+			<div class="choice_button">
+				<button class="button button_blue button_blue-choice">
 					Get Started
 				</button>
 
-				<button class="engage_start_button">
+				<button class="button button_white">
 					Learn More
 				</button>
 			</div>
 
-			<div class="engage_img">
-				<div class="engage_bg">
-					<img class="engage_img_1" src="./img/section_engage/Developers.png" alt="Developers">
-					<p class="engage_text">
+			<div class="choice_img">
+				<div class="choice_bg-card">
+					<img class="choice-image1" src="./img/section_engage/Developers.png" alt="Developers">
+					<p class="choice-text">
 						Developers
 					</p>
 				</div>
-				<div class="engage_bg">
-					<img class="engage_img_2" src="./img/section_engage/Entertainment.png" alt="Entertainment">
-					<p class="engage_text">
+				<div class="choice_bg-card">
+					<img class="choice-image2" src="./img/section_engage/Entertainment.png" alt="Entertainment">
+					<p class="choice-text">
 						Entertainment
 					</p>
 				</div>
-				<div class="engage_bg">
-					<img class="engage_img_3" src="./img/section_engage/Athletes.png" alt="Athletes">
-					<p class="engage_text">
+				<div class="choice_bg-card">
+					<img class="choice-image3" src="./img/section_engage/Athletes.png" alt="Athletes">
+					<p class="choice-text">
 						Athletes
 					</p>
 				</div>
-				<div class="engage_bg">
-					<img class="engage_img_4" src="./img/section_engage/Creators.png" alt="Creators">
-					<p class="engage_text">
+				<div class="choice_bg-card">
+					<img class="choice-image4" src="./img/section_engage/Creators.png" alt="Creators">
+					<p class="choice-text">
 						Creators
 					</p>
 				</div>
@@ -158,8 +265,8 @@
 		</div>
 	</section>
 
-	<section class="section_grid container">
-		<div class="section_grid_text">
+	<section class="grid container">
+		<div class="grid_info">
 
 			<h3 class="grid_title">
 				All Surfaces Covered
@@ -170,7 +277,7 @@
 			</p>
 		</div>
 
-		<div class="grid">
+		<div class="grid_img">
 			<img class="grid_item" src="./img/section_grid/1.png" alt="1">
 			<img class="grid_item" src="./img/section_grid/2.png" alt="2">
 			<img class="grid_item" src="./img/section_grid/3.png" alt="3">
