--- a/project2/index.html
+++ b/project2/index.html
@@ -71,7 +71,7 @@
 	</section>
 
 	<section class="header_footer">
-		<div class="container flex">
+		<div class="container flex flex_column">
 			<div class="header_footer-left">
 				<h6 class="header_footer_title">
 					What is it about?
@@ -95,17 +95,17 @@
 
 	</section>
 
-	<section class="section_icon container flex">
-		<img src="./img/section_icon/NY.png" alt="The New York Times">
-		<img src="./img/section_icon/forbes.png" alt="Forbes">
-		<img src="./img/section_icon/apple.png" alt="Apple">
-		<img src="./img/section_icon/mashable.png" alt="Mashable">
-		<img src="./img/section_icon/WSJ.png" alt="WSJ">
-		<img src="./img/section_icon/google.png" alt="Google">
+	<section class="section_icon grid_section_icon container flex container_icon">
+		<img class="section_icon-img1" src="./img/section_icon/NY.png" alt="The New York Times">
+		<img class="section_icon-img2" src="./img/section_icon/forbes.png" alt="Forbes">
+		<img class="section_icon-img3" src="./img/section_icon/apple.png" alt="Apple">
+		<img class="section_icon-img4" src="./img/section_icon/mashable.png" alt="Mashable">
+		<img class="section_icon-img5" src="./img/section_icon/WSJ.png" alt="WSJ">
+		<img class="section_icon-img6" src="./img/section_icon/google.png" alt="Google">
 	</section>
 
 	<section class="inbox">
-		<div class="container flex">
+		<div class="container flex flex_column flex_column-rev">
 			<div class="container-image">
 				<img class="container-image_img" src="./img/inbox/ouch.svg" alt="inboximg">
 			</div>
@@ -154,8 +154,8 @@
 	</section>
 
 	<section class="communicate">
-		<div class="container">
-			<div class="info">
+		<div class="container flex_column">
+			<div class="info ">
 				<p class="info_pretitle info_pretitle-blue">
 					Communicate Better
 				</p>
@@ -173,12 +173,12 @@
 
 			</div>
 
-			<div class="container-image flex flex_end">
+			<div class="container-image flex flex_end flex_column">
 				<img class="container-image_communicate" src="./img/communicate/ouch.svg" alt="communicate">
 			</div>
 
 			<div class="communicate_footer flex">
-				<div class="communicate_block">
+				<div class="communicate_block communicate_block1">
 					<p class="communicate_text">
 						<span class="communicate_text-bold">Subscriptions.</span> Foundation works with the tools and
 						services you
@@ -188,7 +188,7 @@
 					<a class="communicate_text-link" href="">Learn more about subscriptions</a>
 				</div>
 
-				<div class="communicate_block">
+				<div class="communicate_block communicate_block2">
 					<p class="communicate_text">
 						<span class="communicate_text-bold">Felxible Hours.</span> Get started with our simple snippet of
 						JavaScript
@@ -198,7 +198,7 @@
 					<a class="communicate_text-link" href="#">Get more info about hours</a>
 				</div>
 
-				<div class="communicate_block">
+				<div class="communicate_block communicate_block3">
 					<p class="communicate_text">
 						<span class="communicate_text-bold">Fast Communication.</span> We offer measures like 2FA and SSO to
 						ensure
@@ -231,31 +231,31 @@
 					Get Started
 				</button>
 
-				<button class="button button_white">
+				<button class="button button_white button_white-choice">
 					Learn More
 				</button>
 			</div>
 
 			<div class="choice_img">
-				<div class="choice_bg-card">
+				<div class="choice_bg-card choice-image1-grid">
 					<img class="choice-image1" src="./img/section_engage/Developers.png" alt="Developers">
 					<p class="choice-text">
 						Developers
 					</p>
 				</div>
-				<div class="choice_bg-card">
+				<div class="choice_bg-card choice-image2-grid">
 					<img class="choice-image2" src="./img/section_engage/Entertainment.png" alt="Entertainment">
 					<p class="choice-text">
 						Entertainment
 					</p>
 				</div>
-				<div class="choice_bg-card">
+				<div class="choice_bg-card choice-image3-grid">
 					<img class="choice-image3" src="./img/section_engage/Athletes.png" alt="Athletes">
 					<p class="choice-text">
 						Athletes
 					</p>
 				</div>
-				<div class="choice_bg-card">
+				<div class="choice_bg-card choice-image4-grid">
 					<img class="choice-image4" src="./img/section_engage/Creators.png" alt="Creators">
 					<p class="choice-text">
 						Creators
