--- a/project2/index.html
+++ b/project2/index.html
@@ -2,7 +2,9 @@
 <html>
 
 <head>
-	<meta charset="utf-8">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Project2</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -10,13 +12,14 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
 		integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
-	<link rel="stylesheet" href="./css/style.css" </head>
+	<link rel="stylesheet" href="./css/style.css">
+</head>
 
 <body>
-	<header class="header">
+	<header class="header header_header">
 		<div class="container flex">
 			<div class="logo flex">
-				<img src="./img/header/Icon.svg" alt="logo">
+				<img class="header_img" src="./img/header/Icon.svg" alt="logo">
 				<div>
 					<h6 class="logo_title">
 						Foundation
@@ -278,13 +281,13 @@
 		</div>
 
 		<div class="grid_img">
-			<img class="grid_item" src="./img/section_grid/1.png" alt="1">
-			<img class="grid_item" src="./img/section_grid/2.png" alt="2">
-			<img class="grid_item" src="./img/section_grid/3.png" alt="3">
-			<img class="grid_item" src="./img/section_grid/4.png" alt="4">
-			<img class="grid_item" src="./img/section_grid/5.png" alt="5">
-			<img class="grid_item" src="./img/section_grid/6.png" alt="6">
-			<img class="grid_item" src="./img/section_grid/7.png" alt="7">
+			<img class="grid_item grid_item1" src="./img/section_grid/1.png" alt="1">
+			<img class="grid_item grid_item2" src="./img/section_grid/2.png" alt="2">
+			<img class="grid_item grid_item3" src="./img/section_grid/3.png" alt="3">
+			<img class="grid_item grid_item4" src="./img/section_grid/4.png" alt="4">
+			<img class="grid_item grid_item5" src="./img/section_grid/5.png" alt="5">
+			<img class="grid_item grid_item6" src="./img/section_grid/6.png" alt="6">
+			<img class="grid_item grid_item7" src="./img/section_grid/7.png" alt="7">
 		</div>
 	</section>
 
