--- a/project2/index.html
+++ b/project2/index.html
@@ -37,7 +37,7 @@
 					<div class="header_nav-check"></div>
 					<div class="header_nav-check"></div>
 				</div>
-				<div class="header_nav">
+				<div class="header_nav flex">
 					<ul class="header_ul flex flex_column">
 						<li class="header_li">
 							<a class="header_a" href="#">Home</a>
@@ -110,12 +110,13 @@
 	</section>
 
 	<section class="section_icon grid_section_icon container flex container_icon">
-		<img class="section_icon-img1" src="./img/section_icon/NY.png" alt="The New York Times">
-		<img class="section_icon-img2" src="./img/section_icon/forbes.png" alt="Forbes">
-		<img class="section_icon-img3" src="./img/section_icon/apple.png" alt="Apple">
-		<img class="section_icon-img4" src="./img/section_icon/mashable.png" alt="Mashable">
-		<img class="section_icon-img5" src="./img/section_icon/WSJ.png" alt="WSJ">
-		<img class="section_icon-img6" src="./img/section_icon/google.png" alt="Google">
+		<img class="section_icon-img1" src="./img/section_icon/ny.svg" alt="The New York Times">
+		<img class="section_icon-img2" src="./img/section_icon/forbes.svg" alt="Forbes">
+		<img class="section_icon-img3" src="./img/section_icon/apple.svg" alt="Apple">
+
+		<img class="section_icon-img4" src="./img/section_icon/mashable.svg" alt="Mashable">
+		<img class="section_icon-img5" src="./img/section_icon/wsj.svg" alt="WSJ">
+		<img class="section_icon-img6" src="./img/section_icon/google.svg" alt="Google">
 	</section>
 
 	<section class="inbox">
@@ -282,6 +283,14 @@
 			</div>
 		</div>
 	</section>
+	<section class="section_icon grid_section_icon container flex container_icon">
+		<img class="section_icon-img1" src="./img/section_icon/ny.svg" alt="The New York Times">
+		<img class="section_icon-img2" src="./img/section_icon/forbes.svg" alt="Forbes">
+		<img class="section_icon-img3" src="./img/section_icon/apple.svg" alt="Apple">
+		<img class="section_icon-img4" src="./img/section_icon/mashable.svg" alt="Mashable">
+		<img class="section_icon-img5" src="./img/section_icon/wsj.svg" alt="WSJ">
+		<img class="section_icon-img6" src="./img/section_icon/google.svg" alt="Google">
+	</section>
 
 	<section class="grid container">
 		<div class="grid_info">
@@ -331,6 +340,51 @@
 						</label>
 						<a class="checkbox-a" href="#">Terms of Use.</a>
 					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="about">
+		<div class="container">
+			<div>
+				<div class="about_items">
+					<div class="flex">
+						<p class="about_pretitle">
+							Front-End Developer
+						</p>
+						<p class="about-icon">
+							>
+						</p>
+					</div>
+					<p class="about-text">
+						Everything you need to start building – including open-source code, documentation.
+					</p>
+				</div>
+				<div class="about_items">
+					<div class="flex">
+						<p class="about_pretitle">
+							Community Manager
+						</p>
+						<p class="about-icon">
+							>
+						</p>
+					</div>
+					<p class="about-text">
+						Everything you need to start building – including open-source code, documentation.
+					</p>
+				</div>
+				<div class="about_items">
+					<div class="flex">
+						<p class="about_pretitle">
+							UX/UI Designer
+						</p>
+						<p class="about-icon">
+							>
+						</p>
+					</div>
+					<p class="about-text">
+						Everything you need to start building – including open-source code, documentation.
+					</p>
 				</div>
 			</div>
 		</div>
@@ -439,7 +493,10 @@
 			</div>
 		</div>
 	</footer>
-
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+		integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="./script/script.js"></script>
 </body>
 
 </html>
