--- a/project2/index.html
+++ b/project2/index.html
@@ -12,7 +12,9 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
 		integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
 	<link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" href="./css/carusel.css">
 </head>
 
 <body>
@@ -40,7 +42,7 @@
 				<div class="header_nav flex">
 					<ul class="header_ul flex flex_column">
 						<li class="header_li">
-							<a class="header_a" href="#">Home</a>
+							<a id="about-link" class="header_a" href="#">Home</a>
 						</li>
 
 						<li class="header_li">
@@ -73,7 +75,7 @@
 						Get Started
 					</button>
 
-					<button class="button button_white button_white-inner">
+					<button id="open-modal" class="button button_white button_white-inner">
 						Learn More
 					</button>
 				</div>
@@ -117,6 +119,80 @@
 		<img class="section_icon-img4" src="./img/section_icon/mashable.svg" alt="Mashable">
 		<img class="section_icon-img5" src="./img/section_icon/wsj.svg" alt="WSJ">
 		<img class="section_icon-img6" src="./img/section_icon/google.svg" alt="Google">
+	</section>
+	<section class="features">
+		<div class="features_icon-img">
+			<img class="features_icon-image" src="./img/features/ouch.svg">
+		</div>
+		</div>
+		<div class="flex container">
+			<div class="flex_column">
+				<div class="">
+					<p class="info_pretitle info_pretitle-green">
+						Features
+					</p>
+					<p class="info_title">
+						Easily find leads and customers
+					</p>
+					<p class="info_text info_text-features">
+						Send one-off and automated email, push, and in-app messages to people. Create better
+						stories.
+					</p>
+				</div>
+
+
+				<div>
+					<div class="features_item">
+						<div class="flex flex_start features_container">
+
+							<img class="features_icon" src="./img/features/Icon-1.svg">
+							<p class="features_pretitle">
+								Acquire new customers
+							</p>
+
+						</div>
+
+						<p class="features_text">
+							Everything you need to start building – including open-source code, documentation.
+						</p>
+						<div class="features_line"></div>
+
+					</div>
+					<div class="features_item">
+						<div class="flex flex_start features_container">
+							<img class="features_icon" src="./img/features/Icon-2.svg">
+							<p class="features_pretitle">
+								Engage users
+							</p>
+						</div>
+
+						<p class="features_text">
+							Everything you need to start building – including open-source code, documentation.
+						</p>
+						<div class="features_line"></div>
+
+					</div>
+					<div class="features_item">
+						<div class="flex flex_start features_container">
+							<img class="features_icon" src="./img/features/Icon-3.svg">
+							<p class="features_pretitle">
+								Develop across platforms
+							</p>
+						</div>
+
+						<p class="features_text">
+							Everything you need to start building – including open-source code, documentation.
+						</p>
+						<div class="features_line"></div>
+
+					</div>
+
+				</div>
+			</div>
+			<div class="features_image">
+				<img class="features_image-img" src="./img/features/img.png">
+			</div>
+		</div>
 	</section>
 
 	<section class="inbox">
@@ -291,62 +367,65 @@
 		<img class="section_icon-img5" src="./img/section_icon/wsj.svg" alt="WSJ">
 		<img class="section_icon-img6" src="./img/section_icon/google.svg" alt="Google">
 	</section>
-
-	<section class="grid container">
-		<div class="grid_info">
-
-			<h3 class="grid_title">
-				All Surfaces Covered
-			</h3>
-
-			<p class="grid_text">
-				IOON kills bacteria on your hands, food, tables, laptops, you name it
-			</p>
-		</div>
-
-		<div class="grid_img">
-			<img class="grid_item grid_item1" src="./img/section_grid/1.png" alt="1">
-			<img class="grid_item grid_item2" src="./img/section_grid/2.png" alt="2">
-			<img class="grid_item grid_item3" src="./img/section_grid/3.png" alt="3">
-			<img class="grid_item grid_item4" src="./img/section_grid/4.png" alt="4">
-			<img class="grid_item grid_item5" src="./img/section_grid/5.png" alt="5">
-			<img class="grid_item grid_item6" src="./img/section_grid/6.png" alt="6">
-			<img class="grid_item grid_item7" src="./img/section_grid/7.png" alt="7">
-		</div>
-	</section>
-
-	<section class="input">
-		<div class="container flex flex_center">
-			<div class="input_image">
-				<img class="input_img" src="./img/input/ouch.png" alt="image">
-			</div>
-
-			<div class="input_inner">
-				<div class="input_info">
-					<h6 class="input_title">Start your free trial.</h6>
-					<p class="input_text">Get notified about company updates, news and blog posts. We hate spam.</p>
+	<section class="slider container">
+		<div class="container_slider">
+			<div class="carusel">
+				<div>
+					<p>
+						Trusted by the world’s most innovative businesses – big and small
+					</p>
+					<p>
+						“Comprehensive set of startup tools for all imaginable entrepreneurial needs. Create landing pages,
+						send
+						emails, find
+						freelancers. Perfect for sales, marketing, and support”
+					</p>
+					<p>
+						<span>Viella Malkovich</span>
+						Creative Director at Johnson
+					</p>
 				</div>
-
-				<div class="input_input">
-
-					<input class="input_email" type="email" placeholder="Enter your email">
-					<button class="button button_blue button_blue-input">Get Started</button>
-					<div class="input_checkbox-block">
-						<label class="input_label">
-							<input class="custom_checkbox" type="checkbox">
-							<span class="checkbox-fake"></span>
-							<span class="checkbox-text">Free 14-day trial · Easy setup · Cancel any time. Check
-								out</span>
-						</label>
-						<a class="checkbox-a" href="#">Terms of Use.</a>
-					</div>
+				<div>
+					<p>
+						Trusted by the world’s most innovative businesses – big and small
+					</p>
+					<p>
+						“Comprehensive set of startup tools for all imaginable entrepreneurial needs. Create landing pages,
+						send
+						emails, find
+						freelancers. Perfect for sales, marketing, and support”
+					</p>
+					<p>
+						<span>Viella Malkovich</span>
+						Creative Director at Johnson
+					</p>
+				</div>
+				<div>
+					<p>
+						Trusted by the world’s most innovative businesses – big and small
+					</p>
+					<p>
+						“Comprehensive set of startup tools for all imaginable entrepreneurial needs. Create landing pages,
+						send
+						emails, find
+						freelancers. Perfect for sales, marketing, and support”
+					</p>
+					<p>
+						<span>Viella Malkovich</span>
+						Creative Director at Johnson
+					</p>
 				</div>
 			</div>
 		</div>
 	</section>
-	<section class="about">
+	<section id="about" class="about">
 		<div class="container">
-			<div>
+			<div class="about_text-block">
+				<p class="about_text-title">We’re hiring</p>
+				<p class="about_text-text">We’re a team of lifelong learners. We’re equal parts left and right brained.</p>
+			</div>
+			<button class="flex flex_center button button_about button_blue">More about Company</button>
+			<div class="about_items-block">
 				<div class="about_items">
 					<div class="flex">
 						<p class="about_pretitle">
@@ -389,6 +468,68 @@
 			</div>
 		</div>
 	</section>
+	<section class="grid container">
+		<div class="grid_info">
+
+			<h3 class="grid_title">
+				All Surfaces Covered
+			</h3>
+
+			<p class="grid_text">
+				IOON kills bacteria on your hands, food, tables, laptops, you name it
+			</p>
+		</div>
+
+		<div class="grid_img">
+			<img class="grid_item grid_item1" src="./img/section_grid/1.png" alt="1">
+			<img class="grid_item grid_item2" src="./img/section_grid/2.png" alt="2">
+			<img class="grid_item grid_item3" src="./img/section_grid/3.png" alt="3">
+			<img class="grid_item grid_item4" src="./img/section_grid/4.png" alt="4">
+			<img class="grid_item grid_item5" src="./img/section_grid/5.png" alt="5">
+			<img class="grid_item grid_item6" src="./img/section_grid/6.png" alt="6">
+			<img class="grid_item grid_item7" src="./img/section_grid/7.png" alt="7">
+		</div>
+	</section>
+
+	<section class="input">
+		<div class="container flex flex_center">
+			<div class="input_image">
+				<img class="input_img" src="./img/input/ouch.png" alt="image">
+			</div>
+
+			<div class="input_inner">
+				<div class="input_info">
+					<h6 class="input_title">Start your free trial.</h6>
+					<p class="input_text">Get notified about company updates, news and blog posts. We hate spam.</p>
+				</div>
+				<form method="post">
+					<div class="input_input flex">
+
+						<input id="email" class="input_email" type="email" placeholder="Enter your email">
+						<p id="error-email" class="error-message"></p>
+
+
+						<div>
+							<button id="button" class="button button_blue button_blue-input" type="submit">Get Started</button>
+						</div>
+					</div>
+				</form>
+				<div class="input_checkbox-block">
+					<label class="input_label">
+						<input class="custom_checkbox" type="checkbox">
+						<span class="checkbox-fake"></span>
+						<span class="checkbox-text">Free 14-day trial · Easy setup · Cancel any time. Check
+							out</span>
+					</label>
+					<a class="checkbox-a" href="#">Terms of Use.</a>
+				</div>
+
+			</div>
+
+		</div>
+		</div>
+	</section>
+
 	<footer class="footer">
 		<div class="flex container">
 			<div class="footer_logo flex_start ">
@@ -464,7 +605,8 @@
 			</div>
 		</div>
 
-		<img class="footer_line" src="./img/footer/Line.png">
+		<div class="footer_line"></div>
+
 
 		<div class="flex container footer_end">
 			<div class="footer_end-ul">
@@ -493,10 +635,26 @@
 			</div>
 		</div>
 	</footer>
+	<div class="modal-overlay">
+		<div class="modal">
+			<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda expedita quae non consectetur, eveniet
+				doloremque beatae facere animi magni sint sit debitis ipsa nam distinctio cum blanditiis quo in veritatis?
+			</p>
+			<p class="close">X</p>
+		</div>
+	</div>
+	<div id="up">
+		<span>></span>
+	</div>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
 		integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
 		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
 	<script src="./script/script.js"></script>
+	<script src="./script/modal.js"></script>
+	<script src="./script/bxslider.js"></script>
+	<script src="./script/upButton.js"></script>
 </body>
 
 </html>
