--- a/project2/index.html
+++ b/project2/index.html
@@ -21,7 +21,7 @@
 	<header class="header header_header">
 		<div class="container flex">
 			<div class="logo flex">
-				<img class="header_img" src="./img/header/Icon.svg" alt="logo">
+				<img class="header_img" src="./img/header/icon.svg" alt="logo">
 				<div>
 					<h6 class="logo_title">
 						Foundation
@@ -58,7 +58,7 @@
 	</header>
 
 	<section class="header_inner flex">
-		<div class="container flex header_inner-container">
+		<div class="container flex flex_column-line header_inner-container">
 
 			<div class="header_inner-textblock">
 
@@ -71,7 +71,7 @@
 				</p>
 
 				<div class="header_inner-btn">
-					<button class="button button_blue">
+					<button class="button button_blue button_blue-inner">
 						Get Started
 					</button>
 
@@ -125,9 +125,10 @@
 			<img class="features_icon-image" src="./img/features/ouch.svg">
 		</div>
 		</div>
-		<div class="flex container">
+		<div class="flex flex_column-adap container container_features">
+
 			<div class="flex_column">
-				<div class="">
+				<div>
 					<p class="info_pretitle info_pretitle-green">
 						Features
 					</p>
@@ -145,7 +146,7 @@
 					<div class="features_item">
 						<div class="flex flex_start features_container">
 
-							<img class="features_icon" src="./img/features/Icon-1.svg">
+							<img class="features_icon" src="./img/features/icon-1.svg">
 							<p class="features_pretitle">
 								Acquire new customers
 							</p>
@@ -160,7 +161,7 @@
 					</div>
 					<div class="features_item">
 						<div class="flex flex_start features_container">
-							<img class="features_icon" src="./img/features/Icon-2.svg">
+							<img class="features_icon" src="./img/features/icon-2.svg">
 							<p class="features_pretitle">
 								Engage users
 							</p>
@@ -174,7 +175,7 @@
 					</div>
 					<div class="features_item">
 						<div class="flex flex_start features_container">
-							<img class="features_icon" src="./img/features/Icon-3.svg">
+							<img class="features_icon" src="./img/features/icon-3.svg">
 							<p class="features_pretitle">
 								Develop across platforms
 							</p>
@@ -266,7 +267,7 @@
 				</div>
 			</div>
 
-			<div class="container-image flex flex_end flex_column">
+			<div class="container-image container-img_communicate flex flex_end flex_column">
 				<img class="container-image_communicate" src="./img/communicate/ouch.svg" alt="communicate">
 			</div>
 
@@ -333,25 +334,25 @@
 
 			<div class="choice_img">
 				<div class="choice_bg-card choice-image1-grid">
-					<img class="choice-image1" src="./img/section_engage/Developers.png" alt="Developers">
+					<img class="choice-image1" src="./img/section_engage/developers.png" alt="Developers">
 					<p class="choice-text">
 						Developers
 					</p>
 				</div>
 				<div class="choice_bg-card choice-image2-grid">
-					<img class="choice-image2" src="./img/section_engage/Entertainment.png" alt="Entertainment">
+					<img class="choice-image2" src="./img/section_engage/entertainment.png" alt="Entertainment">
 					<p class="choice-text">
 						Entertainment
 					</p>
 				</div>
 				<div class="choice_bg-card choice-image3-grid">
-					<img class="choice-image3" src="./img/section_engage/Athletes.png" alt="Athletes">
+					<img class="choice-image3" src="./img/section_engage/athletes.png" alt="Athletes">
 					<p class="choice-text">
 						Athletes
 					</p>
 				</div>
 				<div class="choice_bg-card choice-image4-grid">
-					<img class="choice-image4" src="./img/section_engage/Creators.png" alt="Creators">
+					<img class="choice-image4" src="./img/section_engage/creators.png" alt="Creators">
 					<p class="choice-text">
 						Creators
 					</p>
@@ -367,73 +368,88 @@
 		<img class="section_icon-img5" src="./img/section_icon/wsj.svg" alt="WSJ">
 		<img class="section_icon-img6" src="./img/section_icon/google.svg" alt="Google">
 	</section>
-	<section class="slider container">
-		<div class="container_slider">
+	<section class="slider">
+		<div class="container_slider flex_column-adap">
 			<div class="carusel">
-				<div>
-					<p>
+				<div class="container_text">
+					<p class="slider_title">
 						Trusted by the world’s most innovative businesses – big and small
 					</p>
-					<p>
+					<p class="slider_text">
 						“Comprehensive set of startup tools for all imaginable entrepreneurial needs. Create landing pages,
 						send
 						emails, find
 						freelancers. Perfect for sales, marketing, and support”
 					</p>
-					<p>
-						<span>Viella Malkovich</span>
+					<p class="slider_text-name">
+						Viella Malkovich
+					</p>
+					<p class="slider_text-prof">
 						Creative Director at Johnson
 					</p>
 				</div>
 				<div>
-					<p>
-						Trusted by the world’s most innovative businesses – big and small
+					<p class="slider_title">
+						By the world’s most innovative businesses – big and small
 					</p>
-					<p>
+					<p class="slider_text">
 						“Comprehensive set of startup tools for all imaginable entrepreneurial needs. Create landing pages,
 						send
 						emails, find
 						freelancers. Perfect for sales, marketing, and support”
 					</p>
-					<p>
-						<span>Viella Malkovich</span>
+					<p class="slider_text-name">
+						Viella Malkovich
+					</p>
+					<p class="slider_text-prof">
 						Creative Director at Johnson
 					</p>
 				</div>
 				<div>
-					<p>
-						Trusted by the world’s most innovative businesses – big and small
+					<p class="slider_title">
+						World’s most innovative businesses – big and small
 					</p>
-					<p>
+					<p class="slider_text">
 						“Comprehensive set of startup tools for all imaginable entrepreneurial needs. Create landing pages,
 						send
 						emails, find
 						freelancers. Perfect for sales, marketing, and support”
 					</p>
-					<p>
-						<span>Viella Malkovich</span>
+					<p class="slider_text-name">
+						Viella Malkovich
+					</p>
+					<p class="slider_text-prof">
 						Creative Director at Johnson
 					</p>
 				</div>
+
+			</div>
+			<img class="slider_img" src="./img/slider/ouch.svg">
+			<div class="slider_line-container">
+				<div class="slider_line"></div>
 			</div>
 		</div>
 	</section>
+
 	<section id="about" class="about">
 		<div class="container">
 			<div class="about_text-block">
 				<p class="about_text-title">We’re hiring</p>
 				<p class="about_text-text">We’re a team of lifelong learners. We’re equal parts left and right brained.</p>
 			</div>
-			<button class="flex flex_center button button_about button_blue">More about Company</button>
+			<button class="flex flex_center button button_about button_blue button_about-adap">More about Company</button>
 			<div class="about_items-block">
 				<div class="about_items">
 					<div class="flex">
 						<p class="about_pretitle">
 							Front-End Developer
 						</p>
-						<p class="about-icon">
-							>
-						</p>
+						<div class="flex">
+							<p class="about_left">Los Angeles / Remote</p>
+							<p class="about-icon">
+								>
+							</p>
+						</div>
 					</div>
 					<p class="about-text">
 						Everything you need to start building – including open-source code, documentation.
@@ -441,29 +457,41 @@
 				</div>
 				<div class="about_items">
 					<div class="flex">
+
 						<p class="about_pretitle">
 							Community Manager
 						</p>
-						<p class="about-icon">
-							>
-						</p>
+
+						<div class="flex">
+							<p class="about_left">New York / Full-Time</p>
+							<p class="about-icon">
+								>
+							</p>
+
+						</div>
 					</div>
+
 					<p class="about-text">
 						Everything you need to start building – including open-source code, documentation.
 					</p>
+
 				</div>
 				<div class="about_items">
 					<div class="flex">
 						<p class="about_pretitle">
 							UX/UI Designer
 						</p>
-						<p class="about-icon">
-							>
-						</p>
+						<div class="flex">
+							<p class="about_left">New York / Full-Time</p>
+							<p class="about-icon">
+								>
+							</p>
+						</div>
 					</div>
 					<p class="about-text">
 						Everything you need to start building – including open-source code, documentation.
 					</p>
+
 				</div>
 			</div>
 		</div>
@@ -492,7 +520,7 @@
 	</section>
 
 	<section class="input">
-		<div class="container flex flex_center">
+		<div class="container flex flex_center flex_column-rev">
 			<div class="input_image">
 				<img class="input_img" src="./img/input/ouch.png" alt="image">
 			</div>
@@ -502,8 +530,8 @@
 					<h6 class="input_title">Start your free trial.</h6>
 					<p class="input_text">Get notified about company updates, news and blog posts. We hate spam.</p>
 				</div>
-				<form method="post">
-					<div class="input_input flex">
+				<form method="POST">
+					<div class="input_input flex flex_column">
 
 						<input id="email" class="input_email" type="email" placeholder="Enter your email">
 						<p id="error-email" class="error-message"></p>
@@ -531,27 +559,27 @@
 	</section>
 
 	<footer class="footer">
-		<div class="flex container">
-			<div class="footer_logo flex_start ">
-				<div class="footer_logo-inner flex flex_start">
+		<div class="flex container flex_column">
+			<div class="footer_logo flex_start">
+				<div class="footer_logo-inner flex flex_start flex_column">
 					<div>
-						<img class="logo" src="./img/footer/Icon.svg" alt="logo-footer">
+						<img class="logo-footer" src="./img/footer/icon.svg" alt="logo-footer">
 					</div>
 					<div>
-						<p class="logo_title">Foundation</p>
-						<p class="logo_text">Startup landing template</p>
+						<p class="logo_title-footer">Foundation</p>
+						<p class="logo_text-footer">Startup landing template</p>
 					</div>
 				</div>
 				<div>
 					<p class="footer_main footer_text">
 						Foundation is a website template for startups and small teams. It helps to build a website in no time.
 					</p>
-					<img src="./img/footer/AppStore.png" alt="appstore">
-					<img src="./img/footer/Google Play.png" alt="googleplay">
+					<img class=" footer_img footer_img-app" src="./img/footer/appStore.png" alt="appstore">
+					<img class="footer_img" src="./img/footer/google Play.png" alt="googleplay">
 				</div>
 			</div>
 
-			<div class="footer_product-left flex ">
+			<div class="footer_product-left flex">
 				<div>
 					<p class="footer_product-title">
 						Product
@@ -578,7 +606,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="footer_product-right ">
+			<div class="footer_product-right">
 				<div>
 					<p class="footer_product-title">
 						Company
@@ -608,7 +636,7 @@
 		<div class="footer_line"></div>
 
 
-		<div class="flex container footer_end">
+		<div class="flex container footer_end flex_column">
 			<div class="footer_end-ul">
 				<ul class="footer_ul flex flex_start">
 					<li class="footer_li">
@@ -630,7 +658,7 @@
 					<img src="./img/footer/icon-fb.png" alt="facebook">
 				</a>
 				<a class="footer_a footer_li" href="#">
-					<img src="./img/footer/LinkedIn.png" alt="link">
+					<img src="./img/footer/linkedIn.png" alt="link">
 				</a>
 			</div>
 		</div>
