--- a/project2/index.html
+++ b/project2/index.html
@@ -146,7 +146,12 @@
 					<div class="features_item">
 						<div class="flex flex_start features_container">
 
-							<img class="features_icon" src="./img/features/icon-1.svg">
+
+							<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path fill-rule="evenodd" clip-rule="evenodd"
+									d="M12 0C5.376 0 0 5.376 0 12C0 18.624 5.376 24 12 24C18.624 24 24 18.624 24 12C24 5.376 18.624 0 12 0ZM12 10.68C11.268 10.68 10.68 11.268 10.68 12C10.68 12.732 11.268 13.32 12 13.32C12.732 13.32 13.32 12.732 13.32 12C13.32 11.268 12.732 10.68 12 10.68ZM4.8 19.2L14.628 14.628L19.2 4.8L9.372 9.372L4.8 19.2Z"
+									fill="#2B292D" />
+							</svg>
 							<p class="features_pretitle">
 								Acquire new customers
 							</p>
@@ -161,7 +166,12 @@
 					</div>
 					<div class="features_item">
 						<div class="flex flex_start features_container">
-							<img class="features_icon" src="./img/features/icon-2.svg">
+
+							<svg width="23" height="25" viewBox="0 0 23 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path fill-rule="evenodd" clip-rule="evenodd"
+									d="M0 5.95238L11.5 0L23 5.95238V8.33333H0V5.95238ZM2.42105 10.7143V19.0476H6.05263V10.7143H2.42105ZM9.68421 10.7143V19.0476H13.3158V10.7143H9.68421ZM23 21.4286V25H0V21.4286H23ZM16.9474 10.7143V19.0476H20.5789V10.7143H16.9474Z"
+									fill="#2B292D" />
+							</svg>
 							<p class="features_pretitle">
 								Engage users
 							</p>
@@ -175,7 +185,12 @@
 					</div>
 					<div class="features_item">
 						<div class="flex flex_start features_container">
-							<img class="features_icon" src="./img/features/icon-3.svg">
+
+							<svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path fill-rule="evenodd" clip-rule="evenodd"
+									d="M19.5556 0H2.44444C1.1 0 0 1.1 0 2.44444V11C0 12.3444 1.1 13.4444 2.44444 13.4444H19.5556C20.9 13.4444 22 12.3444 22 11V2.44444C22 1.1 20.9 0 19.5556 0ZM19.5556 7.33333H14.6667C14.6667 9.31333 12.98 11 11 11C9.02 11 7.33333 9.31333 7.33333 7.33333H2.44444V2.44444H19.5556V7.33333ZM22 15.8889H14.6667C14.6667 17.9178 13.0289 19.5556 11 19.5556C8.97111 19.5556 7.33333 17.9178 7.33333 15.8889H0V19.5556C0 20.9 1.1 22 2.44444 22H19.5556C20.9 22 22 20.9 22 19.5556V15.8889Z"
+									fill="#2B292D" />
+							</svg>
 							<p class="features_pretitle">
 								Develop across platforms
 							</p>
@@ -520,7 +535,7 @@
 	</section>
 
 	<section class="input">
-		<div class="container flex flex_center flex_column-rev">
+		<div class="input_adap container flex flex_center">
 			<div class="input_image">
 				<img class="input_img" src="./img/input/ouch.png" alt="image">
 			</div>
@@ -531,7 +546,7 @@
 					<p class="input_text">Get notified about company updates, news and blog posts. We hate spam.</p>
 				</div>
 				<form method="POST">
-					<div class="input_input flex flex_column">
+					<div class="input_input flex">
 
 						<input id="email" class="input_email" type="email" placeholder="Enter your email">
 						<p id="error-email" class="error-message"></p>
