--- a/project2/index.html
+++ b/project2/index.html
@@ -33,7 +33,7 @@
 				</div>
 			</div>
 			<div class="flex header_menu">
-				<input class="header_nav-checkbox" type="checkbox">
+				<input class="header_nav-checkbox" type="checkbox" id="checkbox">
 				<div class="header_check-wrapper">
 					<div class="header_nav-check"></div>
 					<div class="header_nav-check"></div>
@@ -46,7 +46,7 @@
 						</li>
 
 						<li class="header_li">
-							<a class="header_a" href="#">Stories</a>
+							<a id="about-link-stories" class="header_a" href="#">Stories</a>
 						</li>
 					</ul>
 					<button class="button button_blue button_blue-header">Get Started</button>
@@ -321,7 +321,7 @@
 
 	</section>
 
-	<section class="choice_bg">
+	<section id="choice" class="choice_bg">
 		<div class="choice_block container">
 			<div class="choice_block-inner">
 				<h6 class="info_pretitle info_pretitle-black">
