--- a/project2/index.html
+++ b/project2/index.html
@@ -161,7 +161,7 @@
 						<p class="features_text">
 							Everything you need to start building – including open-source code, documentation.
 						</p>
-						<div class="features_line"></div>
+						<div id="line" class="line"></div>
 
 					</div>
 					<div class="features_item">
@@ -180,7 +180,7 @@
 						<p class="features_text">
 							Everything you need to start building – including open-source code, documentation.
 						</p>
-						<div class="features_line"></div>
+						<div id="line-engage" class="line"></div>
 
 					</div>
 					<div class="features_item">
@@ -194,15 +194,17 @@
 							<p class="features_pretitle">
 								Develop across platforms
 							</p>
+
+
 						</div>
+
 
 						<p class="features_text">
 							Everything you need to start building – including open-source code, documentation.
 						</p>
-						<div class="features_line"></div>
 
 					</div>
-
+					<div id="line-develop" class="line"></div>
 				</div>
 			</div>
 			<div class="features_image">
